this should fix some of the overflow issues

--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -1,25 +1,29 @@
 @import 'structure';
 
-#wrapper{
-	text-align: center;
-	font-size: 25px;
+body{
+
+	overflow:hidden;
+	#wrapper{
+		text-align: center;
+		font-size: 25px;
 	// height: 90vh;
 	// padding-top: 10vh;
 	// background-color: $header_footer_blue;
 	color: #d1dbbd;
 	text-shadow: 0px -2px 0px rgba(0, 0, 0, 0.8), 0px 1px 0px rgba(255, 255, 255, 0.4);
 	height:100%;
-	overflow : scroll;
+	overflow : auto;
 
 
-	#deets{
-		li{
-			display: inline;
-			padding-left: 20px;
-			padding-right: 20px;
+		#deets{
+			li{
+				display: inline;
+				padding-left: 20px;
+				padding-right: 20px;
+			}
 		}
-	}
-	h2{
-		padding-top:25px;
+		h2{
+			padding-top:25px;
+		}
 	}
 }
